Fixed empty jumbotron sizing when on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,12 +74,17 @@ body {
 /*-------------------*/
 @media (max-width: 500px) {
   .jumbotron {
-    height: 32%;
+   
+    max-height: 30%;
   }
 
   #locale img {
     width: 30%;
     height: auto;
+  }
+
+  .list-group-item {
+    border: none;
   }
 
   #five-day{
